# Proiect-PCD

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Proiect_PCD.cbp  README.md  build.sh  client.c  cmake_install.cmake  server.c
.cmake/api/v1/reply/: cache-v2-75a9fbe53a8dacbfdc5d.json  cache-v2-b5a972978338f49ab514.json  cmakeFiles-v1-58ec5118aa067386dadf.json  cmakeFiles-v1-f0316375409e8c1ec3b6.json  codemodel-v2-1a9afebfa4f89ccf152d.json  codemodel-v2-8964b8a57b4278a3af41.json  index-2024-05-24T16-00-34-0291.json  index-2024-05-30T18-53-58-0645.json  target-admin-Debug-362cd0b124adb36afabb.json  target-admin-Debug-ef5d4244ec57f356d3b4.json  target-client-Debug-100aec8a24d359fe8bef.json  target-client-Debug-858f856449861659d017.json  target-database-Debug-19de7e666323294b8466.json  target-login-Debug-6f423157ad4708109fc3.json  target-server-Debug-1f389446c08e3eb2c89e.json  target-server-Debug-92a466b3dcf6a55b3f54.json
WSClient/: package-lock.json  package.json
WSClient/src/: App.jsx  index.css
WSClient/src/common/: get.js  helpers.js  posts.js
WSClient/src/pages/: Home.jsx  Login.jsx  NewPost.jsx  Post.jsx  Register.jsx
include/: connection.h  database.h  fistic_wrapper.h  image_prc_wrapper.h  image_prc_wrapper.hpp  interface_wrapper.h  login.h  opencv_wrapper.h
src/: admin.c  client.c  client.py  database.c  filters.py  fistic_wrapper.cpp  image_prc_wrapper.cpp  interface.py  interface_wrapper.cpp  login.c  opencv_wrapper.cpp  server.c  test.c
